# base-core

./: .build_complete  .gclient.example  .gitignore  .gn  ARCHITECTURE.md  BUILD.gn  BUILD_SUCCESS.md  CLAUDE.md  CLEANUP_DONE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DEPS  FEATURES_GUIDE.md  INCREMENTAL_BUILD_GUIDE.md  MAP.md  PYTHON_RESTORE.md  QUICKSTART.md  README.md  RELEASES.md  SCRIPTS_AUDIT.md  SCRIPTS_UPDATED.md  STRINGS_PATCH.md  WEEKEND_PLAN.md  package.json  src
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
branding/: ASSETS.md  COMPLETE_BRANDING_GUIDE.md
branding/generated_icons/: app.icns
chromium_src/: README.md
components/: README.md
config/: args.gn
context/: SCRIPTS_AUDIT.md
docs/: AUTO_UPDATE.md  BRANDING.md  CHROMIUM_UPDATER_ANALYSIS.md  SIDEPANEL.md
features/: README.md
features/branding/: README.md  STRING_REPLACEMENTS.md  STRING_REPLACEMENT_COMPLETE.md  apply.sh  apply_instant.sh  config.sh  rollback.sh  workflow_test_strings.sh
features/branding/patches/: base-dev-branding.patch
features/branding/scripts/: find_chromium_strings.sh  generate_icon.sh  generate_icons.sh  replace_strings.sh
guides/: BASEDEV_NAMING.md  BRANDING.md  SIDEPANEL.md
patches/: README.md  basedev-sidepanel-test-minimal.patch  baseone-complete-icon-branding.patch  baseone-updater-branding.patch  series
patches/ungoogled-chromium/: base-branding-strings.patch  basedev-code-editor-monaco.patch  basedev-sidepanel-aiassistant.patch
progress/: README.md  TEMPLATE.md
progress/current/: ai-assistant-with-mcp.md  complete-branding-system.md  integrated-code-editor.md
progress/future/: ai-assistant-with-mcp.md  context-service.md  integrated-code-editor.md  login-with-base.md
progress/past/: development-tools-and-guides.md  initial-build-system.md
script/: apply_patches.py  init.js  sync.js
scripts/: README.md  apply_base.sh  apply_baseone_branding.sh  backup_build.sh  build.sh  build_incremental.sh  clone.sh  full-build.sh  init.sh  keep_disk_active.sh  monitor_build.sh  release.sh  restore_build.sh  sync.sh
scripts/_deprecated/: build.sh  build_continue.sh  patch.sh  post_build.sh  rename_chromium_binaries.sh  sync.sh
scripts/chromium/: README.md
services/basedev-context/: README.md  go.mod  main.go
services/basedev-context/framework/: detector.go
services/basedev-context/lsp/: manager.go
services/basedev-context/mcp/: manager.go
tools/: README.md  auto_patch_build.sh  fix_python314.py  patch_depot_tools.py  sidepanel.sh
ungoogled-chromium/entitlements/: app.entitlements
ungoogled-chromium/patches/: series
ungoogled-chromium/patches/ungoogled-chromium/: disable-rust-version-check.patch
version-manager/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  VERSIONING.md  package.json
version-manager/api/: server.js
version-manager/database/: version.json
version-manager/scripts/: bump-version.js  release.sh
