# Copyright (c) 2025 Base Core. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")
import("//build/config/chrome_build.gni")

# Base Core main group
group("base") {
  deps = [
    ":base_browser",
    ":base_common",
    ":base_renderer",
    "//chrome",
  ]
}

# Browser process components
group("base_browser") {
  deps = [
    "//base/browser",
    "//base/components",
  ]
}

# Common components shared across processes
group("base_common") {
  deps = [
    "//base/components/common",
  ]
}

# Renderer process components
group("base_renderer") {
  deps = [
    "//base/renderer",
  ]
}

# Child dependencies
group("child_dependencies") {
  public_deps = [
    "browser",
    "common",
    "renderer",
  ]
}

# Resources
group("resources") {
  public_deps = [
    "resources",
  ]
}

# Packed resources
group("packed_resources") {
  public_deps = [
    "resources:base_resources",
  ]
}
