# Build arguments for Base Core (macOS)
# Import this file in your GN args: gn gen out/Release --args="import(\"//base/build/args.gn\")"

# Base Core branding
is_base_build = true
base_chromium_build = true

# macOS specific
target_os = "mac"
target_cpu = "arm64"  # Change to "x64" for Intel Macs
is_component_build = false

# Enable proprietary codecs for media support
proprietary_codecs = true
ffmpeg_branding = "Chrome"

# Build configuration
is_debug = false
is_official_build = true
symbol_level = 0

# Optimize for size and performance
optimize_webui = true
enable_nacl = false

# Privacy-focused defaults (aligned with ungoogled-chromium)
enable_google_now = false
enable_hangout_services_extension = false
enable_widevine = false
use_official_google_api_keys = false
google_api_key = ""
google_default_client_id = ""
google_default_client_secret = ""

# Disable Google services
enable_mdns = false
enable_service_discovery = false
enable_media_router = false
enable_reporting = false

# Feature flags
enable_extensions = true
enable_pdf = true
enable_print_preview = true
enable_basic_printing = true

# Performance optimizations for macOS
use_thin_lto = true
chrome_pgo_phase = 0

# macOS specific settings
mac_deployment_target = "11.0"  # Minimum macOS Big Sur
use_system_xcode = true
